Update notebooks (need to strip out duplicate code in future)

--- a/notebooks/Aggregate_And_Classify.ipynb
+++ b/notebooks/Aggregate_And_Classify.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foundation_model = \"prism\"\n",
+    "foundation_model = \"resnet18\"\n",
     "\n",
     "# get the absolute path for each slide's set of tile embeddings\n",
     "tile_embed_dir = f\"/opt/gpudata/skin-cancer/outputs/{foundation_model}/tile_embeddings_sorted\"\n",
@@ -117,7 +117,7 @@
    "source": [
     "import torch\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"2\"\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device {device}\")"
    ]
@@ -178,12 +178,14 @@
     "import copy\n",
     "from operator import itemgetter\n",
     "\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import average_precision_score, roc_auc_score\n",
     "from torch import nn\n",
     "from torch.optim import AdamW\n",
     "\n",
     "from models.agg import MILClassifier\n",
     "from models.utils.train import train_epoch, val_epoch\n",
-    "from utils.eval import Evaluator, get_spec_level_probs\n",
+    "from utils.eval import Evaluator\n",
     "\n",
     "\n",
     "EPOCHS = 30\n",
@@ -193,8 +195,16 @@
     "\n",
     "gates = [False, False, True, True]\n",
     "head_counts = [1, 8, 1, 8]\n",
+    "auroc_keys = [k + \"_auroc\" for k in [\"benign\", \"bowens\", \"bcc\", \"scc\"]]\n",
+    "auprc_keys = [k + \"_auprc\" for k in [\"benign\", \"bowens\", \"bcc\", \"scc\"]]\n",
+    "results = pd.DataFrame(\n",
+    "    columns=[\"foundation_model\", \"aggregator\", \"classifier\", \"fold\"]\n",
+    "    + auroc_keys\n",
+    "    + auprc_keys\n",
+    ")\n",
     "\n",
     "for exp_idx in range(len(gates)):\n",
+    "    print(f\"\\n\\n****EXPERIMENT {exp_idx + 1}****\\n\\n\")\n",
     "    # set experiment-specific variables\n",
     "    gated = gates[exp_idx]\n",
     "    heads = head_counts[exp_idx]\n",
@@ -230,10 +240,22 @@
     "\n",
     "        for epoch in range(EPOCHS):\n",
     "            train_loss = train_epoch(\n",
-    "                model, train_loader, optim, loss_fn, BATCH_SIZE, device\n",
+    "                model,\n",
+    "                train_loader,\n",
+    "                optim,\n",
+    "                loss_fn,\n",
+    "                BATCH_SIZE,\n",
+    "                [\"tile_embeds\", \"pos\"],\n",
+    "                \"label\",\n",
+    "                device,\n",
     "            )\n",
     "            val_loss, labels, probs, ids = val_epoch(\n",
-    "                model, val_loader, loss_fn, device\n",
+    "                model,\n",
+    "                val_loader,\n",
+    "                loss_fn,\n",
+    "                device,\n",
+    "                [\"tile_embeds\", \"pos\"],\n",
+    "                \"label\",\n",
     "            )\n",
     "\n",
     "            if val_loss < best_loss:\n",
@@ -272,15 +294,84 @@
     "        )\n",
     "\n",
     "        # extract relevant data from val results for best model\n",
-    "        ids, probs = get_spec_level_probs(\n",
+    "        ids, probs = Evaluator.get_spec_level_probs(\n",
     "            best_model_data[\"ids\"], best_model_data[\"probs\"]\n",
     "        )\n",
     "        labels_onehot_val = np.array(itemgetter(*ids)(labels_onehot))\n",
     "\n",
     "        evaluator.fold(probs, labels_onehot_val, i, len(specimens_by_fold))\n",
+    "        auroc = roc_auc_score(\n",
+    "            labels_onehot_val, probs, average=None, multi_class=\"ovr\"\n",
+    "        )\n",
+    "        auroc_dict = {auroc_keys[i]: v for i, v in enumerate(auroc)}\n",
+    "\n",
+    "        auprc = average_precision_score(labels_onehot_val, probs, average=None)\n",
+    "        auprc_dict = {auprc_keys[i]: v for i, v in enumerate(auprc)}\n",
+    "\n",
+    "        model_details = {}\n",
+    "        model_details[\"foundation_model\"] = foundation_model\n",
+    "        model_details[\"aggregator\"] = aggregator\n",
+    "        model_details[\"classifier\"] = \"MLP\"\n",
+    "        model_details[\"fold\"] = i\n",
+    "        model_details = model_details | auroc_dict | auprc_dict\n",
+    "        details_df = pd.Series(model_details)\n",
+    "        results = pd.concat(\n",
+    "            [results, details_df.to_frame().T], ignore_index=True\n",
+    "        )\n",
     "\n",
     "    evaluator.finalize(class_freqs)\n",
     "    evaluator.save_figs(exp_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.to_csv(\n",
+    "    \"outputs/experiments_by_fold.csv\", sep=\"|\", mode=\"a\", header=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from models.foundation_models.ResNet18 import ResNet18\n",
+    "\n",
+    "resnet = ResNet18(\n",
+    "    \"na\",\n",
+    "    \"/opt/gpudata/skin-cancer/outputs/resnet18/tile_embeddings_sorted\",\n",
+    "    \"/opt/gpudata/skin-cancer/outputs/resnet18/slide_embeddings\",\n",
+    ")\n",
+    "resnet.create_pooled_slide_embeds(\"resnet_slide_embeds_GAP\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(\n",
+    "    \"/opt/gpudata/skin-cancer/outputs/uni/slide_embeddings/uni_slide_embeds_GAP.pkl\",\n",
+    "    \"rb\",\n",
+    ") as f:\n",
+    "    slide_embeds = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slide_embeds[\"660076-5\"].shape"
    ]
   }
  ],
