--- a/notebooks/Classify_Slides.ipynb
+++ b/notebooks/Classify_Slides.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "label_path = os.path.join(DATA_DIR, \"labels/labels.csv\")\n",
     "embedding_path = os.path.join(\n",
-    "    OUTPUT_DIR, \"gigapath/slide_embeddings/gigapath_slide_embeds_GAP.pkl\"\n",
+    "    OUTPUT_DIR, \"resnet18/slide_embeddings/resnet_slide_embeds_GAP.pkl\"\n",
     ")\n",
     "fold_path = os.path.join(DATA_DIR, \"folds.json\")\n",
     "\n",
@@ -98,7 +98,7 @@
     "from sklearn.metrics import average_precision_score, roc_auc_score\n",
     "\n",
     "from utils.split import train_val_split\n",
-    "from utils.eval import Evaluator, get_spec_level_probs\n",
+    "from utils.eval import Evaluator\n",
     "\n",
     "\n",
     "def crossval(\n",
@@ -126,7 +126,7 @@
     "        probs = clf.predict_proba(X_val)\n",
     "\n",
     "        # probs are on slide-level - need specimen level\n",
-    "        _, probs = get_spec_level_probs(val_fold_indices, probs)\n",
+    "        _, probs = Evaluator.get_spec_level_probs(val_fold_indices, probs)\n",
     "\n",
     "        # get onehot labels for val set\n",
     "        y_onehot_val = (\n",
@@ -183,8 +183,8 @@
     "    clf,\n",
     "    slide_folds,\n",
     "    y_onehot,\n",
-    "    \"gigapath/global_pooling/gigapath-xgb\",\n",
-    "    \"gigapath\",\n",
+    "    \"resnet18/global_pooling/resnet18-xgb\",\n",
+    "    \"resnet18\",\n",
     "    \"GAP\",\n",
     "    \"xgb\",\n",
     ")"
@@ -203,8 +203,8 @@
     "    clf,\n",
     "    slide_folds,\n",
     "    y_onehot,\n",
-    "    \"gigapath/global_pooling/gigapath-lr\",\n",
-    "    \"gigapath\",\n",
+    "    \"resnet18/global_pooling/resnet18-lr\",\n",
+    "    \"resnet18\",\n",
     "    \"GAP\",\n",
     "    \"lr\",\n",
     ")"
@@ -239,7 +239,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_results.to_csv(\"outputs/experiments_by_fold.csv\", sep=\"|\", mode=\"a\")"
+    "final_results.to_csv(\n",
+    "    \"outputs/experiments_by_fold.csv\", sep=\"|\", mode=\"a\", header=False\n",
+    ")"
    ]
   }
  ],
