Refactor ensemble method and add outputs

--- a/notebooks/Ensemble.ipynb
+++ b/notebooks/Ensemble.ipynb
@@ -32,12 +32,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load the labels data with folds\n",
+    "import copy\n",
+    "from operator import itemgetter\n",
+    "from typing import Any, Dict, List, Optional, Tuple\n",
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
     "\n",
-    "from utils.load_data import load_data\n",
+    "from sklearn.metrics import average_precision_score, roc_auc_score\n",
+    "from torch import nn\n",
+    "from torch.optim import AdamW\n",
+    "\n",
+    "from data_models.datasets import (\n",
+    "    EnsembleDataset,\n",
+    "    SlideClassificationDataset,\n",
+    "    SlideEncodingDataset,\n",
+    ")\n",
     "from data_models.Label import Label\n",
-    "\n",
+    "from models.ensemble import EnsembleClassifier\n",
+    "from utils.eval import Evaluator\n",
+    "from utils.load_data import load_data\n",
+    "from utils.split import train_val_split_labels, train_val_split_slides"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "label_path = os.path.join(DATA_DIR, \"labels/labels.csv\")\n",
     "fold_path = os.path.join(DATA_DIR, \"folds.json\")\n",
     "\n",
@@ -57,37 +82,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get the tile embedding paths for each tile encoder model\n",
-    "def get_tile_embed_paths(tile_embed_dir):\n",
-    "    fnames = os.listdir(tile_embed_dir)\n",
-    "    fnames.sort()\n",
-    "    tile_embed_paths = {\n",
-    "        fname[:-4]: os.path.join(tile_embed_dir, fname)\n",
-    "        for fname in fnames\n",
-    "        if fname.endswith(\".pkl\") and fname[:6] in set(df.index)\n",
-    "    }\n",
-    "\n",
-    "    # return as dict to act as an ordered set\n",
-    "    return tile_embed_paths\n",
-    "\n",
-    "\n",
-    "tile_encoders = [\"uni\", \"gigapath\"]\n",
-    "tile_embed_path_base = OUTPUT_DIR + \"/{model}/tile_embeddings_sorted\"\n",
-    "tile_embed_paths = {\n",
-    "    model: get_tile_embed_paths(tile_embed_path_base.format(model=model))\n",
-    "    for model in tile_encoders\n",
-    "}\n",
-    "slide_embeds_path = os.path.join(\n",
-    "    OUTPUT_DIR, \"prism/slide_embeddings/prism_slide_embeds_perceiver.pkl\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# get list of specimens within each fold\n",
     "specimens_by_fold = df.groupby(\"fold\").groups\n",
     "specimens_by_fold = [list(specs) for specs in specimens_by_fold.values()]"
@@ -99,22 +93,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# map specimens to slides\n",
-    "slides_by_specimen = {spec: [] for spec in list(df.index)}\n",
-    "for slide_name in tile_embed_paths[\"uni\"]:\n",
-    "    spec = slide_name[:6]\n",
-    "    if slides_by_specimen.get(spec) is not None:\n",
-    "        slides_by_specimen[spec].append(slide_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from data_models.Label import Label\n",
-    "\n",
     "class_freqs = {\n",
     "    label: df[label].value_counts(normalize=True).iloc[1]\n",
     "    for label in Label._member_names_\n",
@@ -127,9 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"2\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device {device}\")"
    ]
@@ -140,25 +116,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, List, Tuple\n",
-    "from operator import itemgetter\n",
-    "\n",
-    "from data_models.datasets import (\n",
-    "    SlideEncodingDataset,\n",
-    "    EnsembleDataset,\n",
-    "    SlideClassificationDataset,\n",
-    ")\n",
-    "from utils.split import train_val_split_slides, train_val_split_labels\n",
-    "\n",
-    "\n",
     "def get_datasets(\n",
     "    val_fold: int,\n",
     "    specimens_by_fold: List[List[str]],\n",
     "    slides_by_specimen: Dict[str, List[str]],\n",
     "    labels_by_specimen: Dict[str, int],\n",
-    "    tile_embed_paths: Dict[str, Dict[str, str]],\n",
-    "    slide_embeds_path: str,\n",
+    "    tile_embed_paths: List[Dict[str, str]],\n",
+    "    slide_embed_paths: Optional[List[str]] = None,\n",
     ") -> Tuple[EnsembleDataset, EnsembleDataset]:\n",
+    "    \"\"\"\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    tile_embed_paths : List[Dict[str, str]]\n",
+    "        A list of tile embedding paths for different models. Each item in\n",
+    "        the list must be a dict with slide ids as keys and paths to tile\n",
+    "        embed pkl files as values\n",
+    "\n",
+    "    slide_embed_paths : List[str]\n",
+    "        A list of slide embedding paths for different models. Each item in\n",
+    "        the list must be a path to a slide embed pkl file\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    Tuple[EnsembleDataset, EnsembleDataset]\n",
+    "        Train, val datasets\n",
+    "    \"\"\"\n",
     "    # get the train and val splits\n",
     "    train, val = train_val_split_slides(\n",
     "        val_fold=val_fold,\n",
@@ -171,35 +153,39 @@
     "        specimens_by_fold=specimens_by_fold,\n",
     "    )\n",
     "\n",
-    "    # create the datasets\n",
-    "    train_slide_encoder_datasets = {\n",
-    "        model: SlideEncodingDataset(\n",
-    "            list(itemgetter(*train)(tile_embed_paths[model])), train_labels\n",
-    "        )\n",
-    "        for model in tile_embed_paths\n",
-    "    }\n",
-    "    val_slide_encoder_datasets = {\n",
-    "        model: SlideEncodingDataset(\n",
-    "            itemgetter(*val)(tile_embed_paths[model]), val_labels\n",
-    "        )\n",
-    "        for model in tile_embed_paths\n",
-    "    }\n",
-    "    train_slide_classifier_dataset = SlideClassificationDataset(\n",
-    "        slide_embeds_path, train, train_labels\n",
-    "    )\n",
-    "    val_slide_classifier_dataset = SlideClassificationDataset(\n",
-    "        slide_embeds_path, val, val_labels\n",
-    "    )\n",
+    "    # get the train sets\n",
+    "    train_slide_encoder_datasets = [\n",
+    "        SlideEncodingDataset(list(itemgetter(*train)(paths)), train_labels)\n",
+    "        for paths in tile_embed_paths\n",
+    "    ]\n",
+    "    if slide_embed_paths is not None:\n",
+    "        train_slide_classifier_datasets = [\n",
+    "            SlideClassificationDataset(path, train, train_labels)\n",
+    "            for path in slide_embed_paths\n",
+    "        ]\n",
+    "    else:\n",
+    "        train_slide_classifier_datasets = []\n",
     "\n",
-    "    # create the ensemble datasets\n",
+    "    # get the val sets\n",
+    "    val_slide_encoder_datasets = [\n",
+    "        SlideEncodingDataset(list(itemgetter(*val)(paths)), val_labels)\n",
+    "        for paths in tile_embed_paths\n",
+    "    ]\n",
+    "    if slide_embed_paths is not None:\n",
+    "        val_slide_classifier_datasets = [\n",
+    "            SlideClassificationDataset(path, val, val_labels)\n",
+    "            for path in slide_embed_paths\n",
+    "        ]\n",
+    "    else:\n",
+    "        val_slide_classifier_datasets = []\n",
+    "\n",
+    "    # construct the ensemble sets\n",
     "    train_set = EnsembleDataset(\n",
-    "        train_slide_encoder_datasets\n",
-    "        | {\"prism\": train_slide_classifier_dataset}\n",
+    "        train_slide_encoder_datasets, train_slide_classifier_datasets\n",
     "    )\n",
     "    val_set = EnsembleDataset(\n",
-    "        val_slide_encoder_datasets | {\"prism\": val_slide_classifier_dataset}\n",
+    "        val_slide_encoder_datasets, val_slide_classifier_datasets\n",
     "    )\n",
-    "\n",
     "    return train_set, val_set"
    ]
   },
@@ -209,19 +195,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Optional\n",
+    "def prep_model_input(\n",
+    "    sample: Tuple[List[Dict[str, Any]], List[Dict[str, Any]]],\n",
+    "    device: torch.device,\n",
+    ") -> Tuple[\n",
+    "    List[torch.Tensor],\n",
+    "    List[torch.Tensor],\n",
+    "    List[torch.Tensor],\n",
+    "    torch.Tensor,\n",
+    "    str,\n",
+    "]:\n",
+    "    tile, slide = sample\n",
     "\n",
-    "import torch.nn as nn\n",
-    "from torch.utils.data import Dataset\n",
+    "    # add batch dim and collate\n",
+    "    tile_embeds = []\n",
+    "    coords = []\n",
+    "    slide_embeds = []\n",
+    "    label = None\n",
+    "    slide_id = None\n",
+    "    for embed in tile:\n",
+    "        tile_embeds.append(embed[\"tile_embeds\"].unsqueeze(0).to(device))\n",
+    "        coords.append(embed[\"pos\"].unsqueeze(0).to(device))\n",
+    "        label = embed[\"label\"]\n",
+    "        slide_id = embed[\"id\"]\n",
+    "\n",
+    "    for embed in slide:\n",
+    "        slide_embeds.append(embed[\"slide_embed\"].unsqueeze(0).to(device))\n",
+    "        label = embed[\"label\"]\n",
+    "        slide_id = embed[\"id\"]\n",
+    "\n",
+    "    label = torch.tensor([label]).to(device)\n",
+    "\n",
+    "    return tile_embeds, coords, slide_embeds, label, slide_id\n",
     "\n",
     "\n",
     "def train_epoch(\n",
-    "    model: nn.Module,\n",
-    "    dataset: Dataset,\n",
+    "    model: EnsembleClassifier,\n",
+    "    dataset: EnsembleDataset,\n",
     "    optimizer: torch.optim,\n",
     "    loss_fn: nn.Module,\n",
     "    grad_accum_steps: int,\n",
-    "    device: Optional[torch.device] = None,\n",
+    "    device: torch.device,\n",
     ") -> float:\n",
     "    \"\"\"\n",
     "    Trains an epoch.\n",
@@ -244,9 +258,8 @@
     "        The number of batches/samples to accumulate gradients for before\n",
     "        updating the model\n",
     "\n",
-    "    device : Optional[torch.device]\n",
-    "        The device to send the model and data to. If not provided, the model\n",
-    "        and data will not be moved to a device\n",
+    "    device : torch.device\n",
+    "        The device to send the model and data to\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -258,25 +271,12 @@
     "    model.train()\n",
     "    order = np.random.permutation(len(dataset))\n",
     "    for n, i in enumerate(order):\n",
-    "        sample = dataset[i]\n",
-    "        x = {\n",
-    "            \"uni\": sample[\"uni\"][\"tile_embeds\"].unsqueeze(0),\n",
-    "            \"gigapath\": sample[\"gigapath\"][\"tile_embeds\"].unsqueeze(0),\n",
-    "            \"prism\": sample[\"prism\"][\"slide_embed\"].unsqueeze(0),\n",
-    "        }\n",
-    "        coords = {\n",
-    "            \"uni\": sample[\"uni\"][\"pos\"].unsqueeze(0),\n",
-    "            \"gigapath\": sample[\"gigapath\"][\"pos\"].unsqueeze(0),\n",
-    "        }\n",
-    "        label = torch.tensor([sample[\"uni\"][\"label\"]])\n",
+    "        tile_embeds, coords, slide_embeds, label, _ = prep_model_input(\n",
+    "            dataset[i], device\n",
+    "        )\n",
     "\n",
-    "        for key in x:\n",
-    "            x[key] = x[key].to(device)\n",
-    "            if key in coords:\n",
-    "                coords[key] = coords[key].to(device)\n",
-    "\n",
-    "        logits = model(x, coords)\n",
-    "        loss = loss_fn(logits, label.to(logits.device))\n",
+    "        logits = model.forward(tile_embeds, coords, slide_embeds)\n",
+    "        loss = loss_fn(logits, label)\n",
     "        loss.backward()\n",
     "        agg_loss += loss.item()\n",
     "\n",
@@ -294,8 +294,8 @@
     "\n",
     "\n",
     "def val_epoch(\n",
-    "    model: nn.Module,\n",
-    "    dataset: Dataset,\n",
+    "    model: EnsembleClassifier,\n",
+    "    dataset: EnsembleDataset,\n",
     "    device: torch.device,\n",
     "    loss_fn: Optional[nn.Module] = None,\n",
     ") -> Tuple[float, torch.Tensor, torch.Tensor, List[str]]:\n",
@@ -338,32 +338,20 @@
     "\n",
     "    model.to(device)\n",
     "    model.eval()\n",
-    "    with torch.no_grad():\n",
+    "    with torch.inference_mode():\n",
     "        for i, sample in enumerate(dataset):\n",
-    "            x = {\n",
-    "                \"uni\": sample[\"uni\"][\"tile_embeds\"].unsqueeze(0),\n",
-    "                \"gigapath\": sample[\"gigapath\"][\"tile_embeds\"].unsqueeze(0),\n",
-    "                \"prism\": sample[\"prism\"][\"slide_embed\"].unsqueeze(0),\n",
-    "            }\n",
-    "            coords = {\n",
-    "                \"uni\": sample[\"uni\"][\"pos\"].unsqueeze(0),\n",
-    "                \"gigapath\": sample[\"gigapath\"][\"pos\"].unsqueeze(0),\n",
-    "            }\n",
-    "            label = torch.tensor([sample[\"uni\"][\"label\"]])\n",
+    "            tile_embeds, coords, slide_embeds, label, slide_id = (\n",
+    "                prep_model_input(sample, device)\n",
+    "            )\n",
     "\n",
-    "            for key in x:\n",
-    "                x[key] = x[key].to(device)\n",
-    "                if key in coords:\n",
-    "                    coords[key] = coords[key].to(device)\n",
-    "\n",
-    "            logits = model(x, coords)\n",
+    "            logits = model(tile_embeds, coords, slide_embeds)\n",
     "            if loss_fn is not None:\n",
-    "                loss = loss_fn(logits, label.to(device))\n",
+    "                loss = loss_fn(logits, label)\n",
     "                agg_loss += loss.item()\n",
     "\n",
     "            outputs.append(torch.softmax(logits.detach().cpu(), dim=-1))\n",
     "            labels.append(label)\n",
-    "            ids.append(sample[\"uni\"][\"id\"])\n",
+    "            ids.append(slide_id)\n",
     "    outputs = torch.cat(outputs)\n",
     "    labels = torch.cat(labels)\n",
     "    return agg_loss / (i + 1), labels, outputs, ids"
@@ -375,18 +363,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import copy\n",
-    "from operator import itemgetter\n",
+    "# get the tile embedding paths for each tile encoder model\n",
+    "def get_tile_embed_paths(tile_embed_dir: str) -> Dict[str, str]:\n",
+    "    fnames = os.listdir(tile_embed_dir)\n",
+    "    fnames.sort()\n",
+    "    tile_embed_paths = {\n",
+    "        fname[:-4]: os.path.join(tile_embed_dir, fname)\n",
+    "        for fname in fnames\n",
+    "        if fname.endswith(\".pkl\") and fname[:6] in set(df.index)\n",
+    "    }\n",
     "\n",
-    "import pandas as pd\n",
-    "from sklearn.metrics import average_precision_score, roc_auc_score\n",
-    "from torch import nn\n",
-    "from torch.optim import AdamW\n",
-    "\n",
-    "from models.ensemble import EnsembleClassifier\n",
-    "from utils.eval import Evaluator\n",
+    "    # keys are slide ids, values are the paths\n",
+    "    return tile_embed_paths\n",
     "\n",
     "\n",
+    "included_models = {\"gigapath\": \"tile\", \"prism\": \"slide\"}\n",
+    "foundation_model = \"ensemble_\" + \"\".join(\n",
+    "    [m[0] for m in included_models.keys()]\n",
+    ")\n",
+    "\n",
+    "# get the paths for all included tile embeddings\n",
+    "tile_encoders = [k for k, v in included_models.items() if v == \"tile\"]\n",
+    "tile_embed_path_base = OUTPUT_DIR + \"/{model}/tile_embeddings_sorted\"\n",
+    "tile_embed_paths = {\n",
+    "    model: get_tile_embed_paths(tile_embed_path_base.format(model=model))\n",
+    "    for model in tile_encoders\n",
+    "}\n",
+    "\n",
+    "# get the path for the prism slide embeddings if included\n",
+    "slide_embeds_path = None\n",
+    "if \"prism\" in included_models:\n",
+    "    slide_embeds_path = os.path.join(\n",
+    "        OUTPUT_DIR, \"prism/slide_embeddings/prism_slide_embeds_perceiver.pkl\"\n",
+    "    )\n",
+    "\n",
+    "# map specimens to slides\n",
+    "slides_by_specimen = {spec: [] for spec in list(df.index)}\n",
+    "for slide_name in tile_embed_paths[\"gigapath\"]:\n",
+    "    spec = slide_name[:6]\n",
+    "    if slides_by_specimen.get(spec) is not None:\n",
+    "        slides_by_specimen[spec].append(slide_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "EPOCHS = 30\n",
     "BATCH_SIZE = 16\n",
     "NUM_LABELS = 4\n",
@@ -401,7 +425,6 @@
     ")\n",
     "\n",
     "# set experiment-specific variables\n",
-    "foundation_model = \"ensemble\"\n",
     "gated = False\n",
     "heads = 1\n",
     "aggregator = \"abmil\"\n",
@@ -421,11 +444,13 @@
     "        specimens_by_fold,\n",
     "        slides_by_specimen,\n",
     "        labels_dict,\n",
-    "        tile_embed_paths,\n",
-    "        slide_embeds_path,\n",
+    "        list(tile_embed_paths.values()),\n",
+    "        [slide_embeds_path] if slide_embeds_path is not None else None,\n",
     "    )\n",
     "\n",
-    "    model = EnsembleClassifier().to(device)\n",
+    "    model = EnsembleClassifier(\n",
+    "        tile_encoder_dim=[1536], slide_encoder_dim=1280, out_features=4\n",
+    "    ).to(device)\n",
     "    loss_fn = nn.CrossEntropyLoss()\n",
     "    optim = AdamW(model.parameters(), lr=1e-5)\n",
     "\n",
