--- a/notebooks/Aggregate_And_Classify.ipynb
+++ b/notebooks/Aggregate_And_Classify.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foundation_model = \"resnet18\"\n",
+    "foundation_model = \"uni\"\n",
     "\n",
     "# get the absolute path for each slide's set of tile embeddings\n",
     "tile_embed_dir = f\"/opt/gpudata/skin-cancer/outputs/{foundation_model}/tile_embeddings_sorted\"\n",
@@ -117,7 +117,7 @@
    "source": [
     "import torch\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"2\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device {device}\")"
    ]
@@ -193,8 +193,8 @@
     "NUM_LABELS = 4\n",
     "PATIENCE = 10\n",
     "\n",
-    "gates = [False, False, True, True]\n",
-    "head_counts = [1, 8, 1, 8]\n",
+    "gates = [False]\n",
+    "head_counts = [1]\n",
     "auroc_keys = [k + \"_auroc\" for k in [\"benign\", \"bowens\", \"bcc\", \"scc\"]]\n",
     "auprc_keys = [k + \"_auprc\" for k in [\"benign\", \"bowens\", \"bcc\", \"scc\"]]\n",
     "results = pd.DataFrame(\n",
@@ -208,12 +208,15 @@
     "    # set experiment-specific variables\n",
     "    gated = gates[exp_idx]\n",
     "    heads = head_counts[exp_idx]\n",
-    "    aggregator = \"gabmil\" if gated else \"abmil\"\n",
+    "    aggregator = \"gabmil_test\" if gated else \"abmil_test\"\n",
     "    save_directory = \"gated\" if gated else \"ungated\"\n",
     "    model_name = (\n",
     "        \"chkpts/{foundation_model}-{aggregator}-{heads}_heads-fold-{i}.pt\"\n",
     "    )\n",
-    "    exp_name = f\"{foundation_model}/abmil/{save_directory}/{foundation_model}-3_hidden-{heads}_heads\"\n",
+    "    # exp_name = f\"{foundation_model}/abmil/{save_directory}/{foundation_model}-3_hidden-{heads}_heads\"\n",
+    "    exp_name = (\n",
+    "        f\"{foundation_model}/testing/{foundation_model}-3_hidden-{heads}_heads\"\n",
+    "    )\n",
     "\n",
     "    evaluator = Evaluator(Label)\n",
     "\n",
@@ -252,10 +255,10 @@
     "            val_loss, labels, probs, ids = val_epoch(\n",
     "                model,\n",
     "                val_loader,\n",
-    "                loss_fn,\n",
     "                device,\n",
     "                [\"tile_embeds\", \"pos\"],\n",
     "                \"label\",\n",
+    "                loss_fn,\n",
     "            )\n",
     "\n",
     "            if val_loss < best_loss:\n",
@@ -332,46 +335,6 @@
     "results.to_csv(\n",
     "    \"outputs/experiments_by_fold.csv\", sep=\"|\", mode=\"a\", header=False\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from models.foundation_models.ResNet18 import ResNet18\n",
-    "\n",
-    "resnet = ResNet18(\n",
-    "    \"na\",\n",
-    "    \"/opt/gpudata/skin-cancer/outputs/resnet18/tile_embeddings_sorted\",\n",
-    "    \"/opt/gpudata/skin-cancer/outputs/resnet18/slide_embeddings\",\n",
-    ")\n",
-    "resnet.create_pooled_slide_embeds(\"resnet_slide_embeds_GAP\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "\n",
-    "with open(\n",
-    "    \"/opt/gpudata/skin-cancer/outputs/uni/slide_embeddings/uni_slide_embeds_GAP.pkl\",\n",
-    "    \"rb\",\n",
-    ") as f:\n",
-    "    slide_embeds = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "slide_embeds[\"660076-5\"].shape"
    ]
   }
  ],
