--- a/notebooks/Aggregate_And_Classify_MLP.ipynb
+++ b/notebooks/Aggregate_And_Classify_MLP.ipynb
@@ -41,7 +41,7 @@
     "label_path = os.path.join(DATA_DIR, \"labels/labels.csv\")\n",
     "fold_path = os.path.join(DATA_DIR, \"folds.json\")\n",
     "embedding_path = os.path.join(\n",
-    "    OUTPUT_DIR, \"resnet18/slide_embeddings/resnet_slide_embeds_GAP.pkl\"\n",
+    "    OUTPUT_DIR, \"prism/slide_embeddings/prism_slide_embeds_GAP.pkl\"\n",
     ")\n",
     "\n",
     "df = load_data(\n",
@@ -119,7 +119,7 @@
    "source": [
     "import torch\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"2\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device {device}\")"
    ]
@@ -199,12 +199,12 @@
     "NUM_LABELS = 4\n",
     "PATIENCE = 10\n",
     "\n",
-    "foundation_model = \"resnet18\"\n",
-    "aggregator = \"GAP\"\n",
+    "foundation_model = \"prism\"\n",
+    "aggregator = \"PRISM_test\"\n",
     "model_name = (\n",
     "    \"chkpts/{foundation_model}/{foundation_model}-{aggregator}-fold-{i}.pt\"\n",
     ")\n",
-    "exp_name = \"{foundation_model}/global_pooling/{foundation_model}-3_hidden\"\n",
+    "exp_name = \"{foundation_model}/testing/{foundation_model}-3_hidden\"\n",
     "\n",
     "evaluator = Evaluator(Label)\n",
     "auroc_keys = [k + \"_auroc\" for k in [\"benign\", \"bowens\", \"bcc\", \"scc\"]]\n",
@@ -246,7 +246,7 @@
     "            device,\n",
     "        )\n",
     "        val_loss, labels, probs, ids = val_epoch(\n",
-    "            model, val_loader, loss_fn, device, [\"slide_embed\"], \"label\"\n",
+    "            model, val_loader, device, [\"slide_embed\"], \"label\", loss_fn\n",
     "        )\n",
     "\n",
     "        if val_loss < best_loss:\n",
